--- a/css/styles1.css
+++ b/css/styles1.css
@@ -10,11 +10,10 @@
 
 .nav1 {
   background-color: #FbFbFb;
-  margin-top: 5px;
-  position: relative;
+  height: 70px;
 }
 .nav1 .mylogo {
-  position: absolute;
-  left: 224px;
-  top: -7px;
+  position: relative;
+  left: 3px;
+  top: 4px;
 }
