--- a/scss/styles1.scss
+++ b/scss/styles1.scss
@@ -12,11 +12,11 @@ $colore2: #FbFbFb;
 
 .nav1 {
   background-color: $colore2;
-  margin-top: 5px;
-  position: relative;
+  height: 70px;
   .mylogo {
-    position: absolute;
-    left: 224px;
-    top: -7px;
+    position: relative;
+    left: 3px;
+    top: 4px;
   }
 }
+
