--- a/css/styles1.css
+++ b/css/styles1.css
@@ -17,3 +17,34 @@
   left: 3px;
   top: 4px;
 }
+
+.minus {
+  margin-bottom: -32px;
+}
+
+.scale:hover .prova1 {
+  transform: translatey(-5px) rotate(-180deg);
+  transition-duration: 0.8s;
+}
+.scale:hover .prova2 {
+  transform: translatey(5px) rotate(-180deg);
+  transition-duration: 0.8s;
+}
+.scale:hover .prova3 {
+  transform: rotate(360deg);
+  transition-duration: 1.1s;
+}
+
+.ham {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.right-nav {
+  display: flex;
+  flex-direction: row;
+  /*  border-color: black;
+    border-style: solid; */
+  width: 120px;
+}
