--- a/css/styles1.css
+++ b/css/styles1.css
@@ -34,6 +34,10 @@
   transform: rotate(360deg);
   transition-duration: 1.1s;
 }
+.scale:hover h5 {
+  transform: scale(0.95);
+  transition-duration: 0.4s;
+}
 
 .ham {
   display: flex;
@@ -44,7 +48,101 @@
 .right-nav {
   display: flex;
   flex-direction: row;
-  /*  border-color: black;
-    border-style: solid; */
   width: 120px;
+}
+
+.popup {
+  position: fixed;
+  top: 0%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #141417;
+  transition: 2s;
+  visibility: hidden;
+  height: 0;
+  z-index: 3;
+}
+.popup .lgo {
+  position: fixed;
+  left: 18px;
+  top: 15px;
+}
+.popup .content {
+  color: white;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+.popup a {
+  margin-top: 0px;
+  color: #fff;
+  text-decoration: none;
+}
+.popup a:hover {
+  color: #fff;
+}
+.popup:target {
+  visibility: visible;
+  height: 100%;
+}
+.popup:target .content {
+  opacity: 100%;
+}
+
+.menu2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.5s;
+  opacity: 0%;
+}
+.menu2 ul {
+  margin-top: 0;
+  list-style: none;
+}
+.menu2 li {
+  font-size: 7vh;
+  transition: 0.6s;
+  margin-bottom: opx;
+}
+.menu2 li a {
+  border-bottom: 0vw solid white;
+}
+.menu2 li a:hover {
+  color: #bebebe;
+  border-bottom: 0.12vw solid red;
+  transition-duration: 1s;
+}
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+}
+
+.popup .close:hover {
+  transition: transform 0.8s;
+  transform: rotate(90deg) scale(1.3);
+  transform-origin: center;
+}
+
+.principale {
+  position: relative;
+  top: 3vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.principale h6 {
+  color: grey;
+}
+.principale h3 {
+  margin-top: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .right-nav {
+    margin-right: -20px;
+  }
 }
