--- a/scss/styles1.scss
+++ b/scss/styles1.scss
@@ -6,6 +6,7 @@ $colore2: #FbFbFb;
   padding: 0;
 }
 
+
 .corpo {
   background-color: $colore2;
 }
@@ -37,19 +38,132 @@ $colore2: #FbFbFb;
   transform: rotate(360deg);
   transition-duration: 1.1s;
   }
+  h5 {
+    transform: scale(0.95);
+    transition-duration: 0.4s;
+  }
 }
 
 .ham {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-
 }
 
 .right-nav {
   display: flex;
   flex-direction: row; 
-/*  border-color: black;
-  border-style: solid; */
   width: 120px;
+}
+
+
+
+.popup {
+  position: fixed;
+  top: 0%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #141417;
+  transition: 2s;
+  visibility: hidden;
+  height: 0;
+  z-index: 3;
+
+  .lgo {
+    position: fixed;
+    left: 18px;
+    top: 15px;
+
+  }
+
+  .content {
+    color: white;
+    opacity: 0;
+    transition: opacity .5s;
+  }
+
+  a {
+     margin-top: 0px;
+     color: #fff;
+     text-decoration: none;
+  }
+
+  a:hover {
+    color: #fff;
+  }
+
+  &:target {
+    visibility: visible;
+    height: 100%;
+    .content {
+      opacity: 100%;
+    }
+  }
+}
+
+.menu2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: opacity .5s;
+  opacity: 0%;
+
+  ul {
+    margin-top: 0;
+    list-style: none;
+    
+   
+  }
+  li {
+    font-size: 7vh;
+    transition: 0.6s;
+    margin-bottom: opx;
+
+    a {
+    border-bottom: 0vw solid white;
+   }
+   
+    a:hover {
+      color: #bebebe;
+      border-bottom: 0.12vw solid red;
+      transition-duration: 1s;
+    }
+  }
+}
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+}
+.popup .close:hover {
+  transition: transform 0.8s;
+  transform: rotate(90deg) scale(1.3);
+  transform-origin: center;
+}
+
+
+.principale {
+  position: relative;
+  top: 3vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h6 {
+    color: grey;
+  }
+
+  h3 {
+    margin-top: 5px;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .right-nav {
+    margin-right: -20px;
+  }
 }
