--- a/scss/styles1.scss
+++ b/scss/styles1.scss
@@ -1,14 +1,27 @@
-$colore2: #FbFbFb;
+$colore2: #e5e5e5;
+$colore3: #db9602;
+$colore4: #14213d;
+/* font-family: 'Poppins', sans-serif;
+font-family: 'Roboto', sans-serif; */
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 }
 
 
+html, body {
+  background-color: $colore2;
+  height: 100%;
+  width: 100%;
+  
+}
+
 .corpo {
   background-color: $colore2;
+  font-family: 'Poppins', sans-serif;
 }
 
 .nav1 {
@@ -64,9 +77,9 @@ $colore2: #FbFbFb;
   bottom: 0;
   left: 0;
   right: 0;
-  background: #141417;
-  transition: 2s;
-  visibility: hidden;
+  background: rgba(0, 0, 0, 0.99);
+  transition: 1.5s;
+  visibility: collapse;
   height: 0;
   z-index: 3;
 
@@ -80,7 +93,7 @@ $colore2: #FbFbFb;
   .content {
     color: white;
     opacity: 0;
-    transition: opacity .5s;
+    transition: opacity .8s;
   }
 
   a {
@@ -112,14 +125,14 @@ $colore2: #FbFbFb;
 
   ul {
     margin-top: 0;
-    list-style: none;
-    
-   
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
   }
   li {
     font-size: 7vh;
     transition: 0.6s;
-    margin-bottom: opx;
+    margin-bottom: 0px;
 
     a {
     border-bottom: 0vw solid white;
@@ -127,7 +140,7 @@ $colore2: #FbFbFb;
    
     a:hover {
       color: #bebebe;
-      border-bottom: 0.12vw solid red;
+      border-bottom: 0.1vw solid $colore3;
       transition-duration: 1s;
     }
   }
@@ -135,8 +148,8 @@ $colore2: #FbFbFb;
 
 .popup .close {
   position: absolute;
-  top: 20px;
-  right: 30px;
+  top: 1.5vw;
+  right: 1.5vw;
 }
 .popup .close:hover {
   transition: transform 0.8s;
@@ -149,21 +162,649 @@ $colore2: #FbFbFb;
   position: relative;
   top: 3vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
+  margin-bottom: 180px;
+  height: 70%;  
+  
 
-  h6 {
-    color: grey;
+  a {
+    text-decoration: underline;
+    color: $colore4;
+    transition-duration: 0.2s;
+    font-style: italic;
+    &:hover {
+      text-decoration: underline $colore3;
+      color: black; 
+    }
+    &:visited {
+      text-decoration: underline;
+      color: $colore4;
+    }
+    &:visited:hover {
+      text-decoration: underline $colore3;
+      color: black;
+      font-size: 30px;
+    }
   }
+}
 
+.bigtext {
+  font-size: 5.5vh;
+  font-weight: 600;
+  line-height: 50px;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.clrtext {
+  font-size: 16px;
+  font-weight: 600;
+  color: $colore3;
+}
+
+.usualtext {
+  font-weight: 500;
+  margin-top: 5px;
+  font-size: 18px;
+  color: $colore4;
+}
+
+
+.left {
+  display: flex;
+  flex-direction: column;
+  width: 40vw;
+  margin-left: 8%;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100%;
+}
+
+.right {
+  display: flex;
+  width: 40vw;
+  margin-right: 8%;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.separa {
+  position: absolute;
+  bottom: 25px;
+  left: 47.5%;
+  width: 5%;
+  img:hover {
+    transform: scale(1.15);
+    transition-duration: .4s;
+  }
+  
+  
+}
+
+.pics1 {
+  max-inline-size: 50vh;
+  block-size: auto;
+  object-fit: contain;
+}
+
+.secondaria {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 170px;
+  padding-top: 25px;
+}
+
+.grid {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.roww {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.el {
+  width: 46%;
+  height: 30vw;
+  margin-bottom: 3%;
+  margin-top: 3%;
+  background-repeat: no-repeat;
+  background-size: 101% 101%;
+  border-radius: 22px;
+  box-shadow: rgba(9, 9, 9, 0.6) 0px 20px 30px;
+}
+
+.el1 {
+  background-image: url('../images/xxx.jpg');
+  margin-left: 1vw;
+}
+.el2 {
+  background-image: url('../images/xxx.jpg');
+  margin-right: 1vw;
+}
+.el3 {
+  background-image: url('../images/xxx.jpg');
+}
+.el4 {
+  background-image: url('../images/xxx.jpg');;
+}
+
+.inside {
+  visibility: hidden;
+  color: black;
+  background-color: rgba(10, 9, 9,0.8);
+  opacity: 0;
+  width: 100%;
+  height: 0%;
+  transition: .5s;
+  border-radius: 20px;
   h3 {
-    margin-top: 5px;
+   opacity: 0;
+   transition: .4s;
+   color: white;
+   margin-left: 15px;
+   margin-top: 12px;
   }
+  h6 {
+    opacity: 0;
+    transition: .4s;
+    color: $colore3;
+    margin-left: 15px;
+    padding-top: 12px;
+   }
+}
 
+.el:hover .inside {
+  visibility: visible;
+  height: 100%;
+  opacity: 1;
+  
+  h3, h6 {
+    opacity: 1;
+  }
+}
+
+.terza {
+  margin-top: 10vh;
+  height: max-content;
+  margin-bottom: 13vh;
+}
+
+.titolo3 {
+  margin-left: 10vw;
+  width: 80vw;
+}
+
+.progress1 {
+  width: 80vw;
+  margin-top: 14vh;
+  margin-left: 10vw;
+  display: flex;
+  flex-direction: row;
+  img {
+    width: 8vh;
+    z-index: 11;
+  }
+  img:hover {
+    transform: scale(1.2) translatex(-40%) translateY(-8%);
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
+}
+
+.barx {
+  width: 11.42vw;
+  height: 4vh;
+  border: 2px solid $colore3;
+  border-right: 0px solid $colore2;
+  background-color: #db960231;
+  box-shadow: rgba(110, 110, 110, 0.8) 0px 5px 4px 1px; 
+  a {
+    display: inline;
+    text-decoration: underline;
+    transition-duration: 0.2s;
+    &:hover {
+      color: black;
+      text-decoration: underline; 
+    }
+    &:visited {
+      text-decoration: underline;
+      color: black;
+    }
+    &:visited:hover {
+      text-decoration: underline ;
+      color: black;
+    }
+  }
+  img {
+    z-index: 2;
+  }  
+}
+
+.espandibile {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: #a3a3a32a;
+  width: 100%;
+  height: max-content;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  h5 {
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+  }
+}
+
+.bar1 {
+  border-right: 1.6px solid $colore2;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  position: relative;
+  background-color: $colore3;
+  
+  .htmllogo {
+    position: absolute;
+    bottom: 4.5vh;
+    left: 50%;
+    transform: translatex(-50%);
+   }
+   .espandibile1 {
+     visibility: collapse;
+     position: absolute;
+     top: 4vh;
+    }
+    #expand-togglexx:checked ~ * .espandibile1 {
+      visibility: visible;
+    }
+    #expand-togglexx {
+      display: none;
+    }
+}
+
+.bar2 {
+  position: relative;
+  background-color: $colore3;
+  border-right: none;
+  .csslogo {
+    position: absolute;
+    bottom: 4.5vh;
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  .espandibile2 {
+    visibility: collapse;
+    position: absolute;
+    top: 4vh;
+   }
+   #expand-togglexx2:checked ~ * .espandibile2 {
+    visibility: visible;
+  }
+  #expand-togglexx2 {
+    display: none;
+  } 
+}
+.bar3 {
+  position: relative;
+  .javascriptlogo {
+    position: absolute;
+    bottom: 4.5vh;
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  .espandibile3 {
+    visibility: collapse;
+    position: absolute;
+    top: 4vh;
+   }
+   #expand-togglexx3:checked ~ * .espandibile3 {
+    visibility: visible;
+  }
+  #expand-togglexx3 {
+    display: none;
+  }
+  img {
+    width: 7vh;
+  } 
+}
+.bar4 {
+  position: relative;
+  .reactjslogo {
+    position: absolute;
+    bottom: 4.5vh;
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  .espandibile4 {
+    visibility: collapse;
+    position: absolute;
+    top: 4vh;
+   }
+   #expand-togglexx4:checked ~ * .espandibile4 {
+    visibility: visible;
+  }
+  #expand-togglexx4 {
+    display: none;
+  } 
+}
+.bar5 {
+  position: relative;
+  .nodejslogo {
+    position: absolute;
+    bottom: 4.5vh;
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  .espandibile5 {
+    visibility: collapse;
+    position: absolute;
+    top: 4vh;
+   }
+   #expand-togglexx5:checked ~ * .espandibile5 {
+    visibility: visible;
+  }
+  #expand-togglexx5 {
+    display: none;
+  } 
+}
+.bar6 {
+  position: relative;
+  .wordpresslogo {
+    position: absolute;
+    bottom: 4.5vh;
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  .espandibile6 {
+    visibility: collapse;
+    position: absolute;
+    top: 4vh;
+   }
+   #expand-togglexx6:checked ~ * .espandibile6 {
+    visibility: visible;
+  }
+  #expand-togglexx6 {
+    display: none;
+  } 
+}
+.bar7 {
+  position: relative;
+  border-right: 2px solid $colore3;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  .stilogo {
+    position: absolute;
+    bottom: 4.5vh;
+    left: 50%;
+    transform: translatex(-50%);
+  }
+  .espandibile7 {
+    visibility: collapse;
+    position: absolute;
+    top: 4vh;
+   }
+   #expand-togglexx7:checked ~ * .espandibile7 {
+    visibility: visible;
+  }
+  #expand-togglexx7 {
+    display: none;
+  }
+}
+
+.quarta {
+  margin-left: 10vw;
+  width: 80vw;
+  padding-bottom: 20vh;
+}
+.formz {
+  display: flex;
+  flex-direction: row;
+  width: 80vw;
+  margin-top: 3vh;
+}
+.formstyle0 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 50%;
+}
+.formstyle1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  width: 12vw;
+  margin-right: 3vw;
+  justify-content: center;
+  #insname, #insmail {
+    margin-bottom: 2vh;
+    font-size: 14px;
+    padding: 3px;
+    border: 2px solid #00bcc0;
+    border-radius: 12px;
+  }
+}
+.txtarea {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  width: 22vw;
+  height: 30vh;
+  resize: none;
+  border: 2px solid #00bcc0;
+  border-radius: 12px;
+  background-color: #f8f8f8;
+  padding: 4px; 
+}
+.submitbtn {
+  font-weight: 600;
+  font-size: 18px;
+  margin-top: 0vh;
+  align-self: center;
+  width: max-content;
+  border: none;
+  border-radius: 20px;
+  background-color:$colore2;
+  padding: 10px;
+  &:hover {
+    background-color: #6a6a6a1a;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+}
+.contact2 {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  border: 2px solid red;
+  .listc {
+    margin-left: 10%;
+    h6 {
+      margin-left: 6px;
+      display: inline;
+      color: #ff0000;
+      font-size: 12px;
+    }
+    a {
+      text-decoration: none;
+      color: black;
+    }
+  }
+}
+
+.roww2 {
+  display: none;
+}
+
+#imm2 {
+  display: none;
 }
 
 @media screen and (max-width: 768px) {
   .right-nav {
     margin-right: -20px;
+  }
+
+  .popup {
+    align-items: flex-start;
+    .menu2 {
+      padding-top: 12%;
+    }
+    .close {
+      position: absolute;
+      top: 4vw;
+      right: 4vw;
+      width: 8vw;
+    }
+  }
+
+  .principale {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 10%;
+    justify-content: center;
+    align-items: center; 
+  }
+
+  .right {
+    width: 80%;
+    height: 50%;
+    margin-right: 0;
+    margin-left: 0;
+    padding-bottom: 40px;
+    padding-top: 40px; 
+  }
+
+  .left {
+    width: 80%;
+    margin-left: 0;
+    margin-top: 20px; 
+  }
+
+  #imm1 {
+    display: none;
+  }
+
+  #imm2 {
+    display: block;
+    width: 100%;
+  }
+
+  .secondaria {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center; 
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    margin-top: -40px;
+    padding-top: 0px;
+  }
+
+  .grid {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .roww {
+    width: 80%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .el {
+    width: 80vw;
+    height: 80vw;
+    background-size: 80vw 80vw;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .roww2 {
+    display: none;
+  }
+
+
+}
+
+@media screen and (min-height: 900px) {
+  .separa {
+    bottom: 10vh;
+  }
+  .secondaria {
+    padding-top: 8vh;
+  }
+}
+
+@media screen and (min-height: 1138px) {
+  .separa {
+    display: none;
+  }
+  .secondaria {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 1370px) {
+  .progress1 {
+    height: 60vw;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+    border: 2px solid red;
+  }
+  .barx {
+    width: 30%;
+    img {
+      max-width: 65px;
+    }
+  }
+
+  .bar3 {
+    border-right: 1px solid #00bcc0;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  .bar4 {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  .bar6 {
+    border-right: 1px solid #00bcc0;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  .bar7 {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 990px ) {
+  .progress1 {
+    height: 77vw;
+  }
+  .espandibile {
+    h5 {
+      font-size: 12px;
+    }
   }
 }
