--- a/scss/_max768.scss
+++ b/scss/_max768.scss
@@ -74,6 +74,7 @@
   #projects {
     background-color: #f3f3f3;
     height: max-content;
+    padding-bottom: 45px;
     .separa {
       display: none;
     }
