--- a/css/styles1.css
+++ b/css/styles1.css
@@ -729,7 +729,7 @@ textarea:focus, input:focus {
 
 footer {
   color: #ededed;
-  height: 30vh;
+  height: 250px;
   background-color: rgb(6, 7, 20);
   display: flex;
   flex-direction: column;
