--- a/scss/styles1.scss
+++ b/scss/styles1.scss
@@ -428,7 +428,7 @@ textarea:focus, input:focus{
 
 footer {
   color: $colore2;
-  height: 30vh;
+  height: 250px;
   background-color: rgb(6, 7, 20);
   display: flex;
   flex-direction: column;
