--- a/scss/styles1.scss
+++ b/scss/styles1.scss
@@ -339,7 +339,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   h6, h1, h3 {
     margin-left: 10vw;
     margin-right: 10vw;
