--- a/css/styles1.css
+++ b/css/styles1.css
@@ -950,12 +950,12 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   .inside h6 {
     font-size: 3vw;
   }
-  .el:active .inside {
+  .el:hover .inside, .el:active .inside {
     visibility: visible;
     height: 100%;
     opacity: 1;
   }
-  .el:active .inside h3, .el:active .inside h6 {
+  .el:hover .inside h3, .el:hover .inside h6, .el:active .inside h3, .el:active .inside h6 {
     opacity: 1;
   }
   .formstyle0 {
