--- a/css/styles1.css
+++ b/css/styles1.css
@@ -94,6 +94,10 @@ html, body {
 .popup:target .content {
   opacity: 100%;
 }
+.popup:target .menu2 {
+  transition-delay: 0.4s;
+  opacity: 100%;
+}
 
 .menu2 {
   display: flex;
@@ -949,14 +953,6 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   }
   .inside h6 {
     font-size: 3vw;
-  }
-  .el:hover .inside, .el:active .inside {
-    visibility: visible;
-    height: 100%;
-    opacity: 1;
-  }
-  .el:hover .inside h3, .el:hover .inside h6, .el:active .inside h3, .el:active .inside h6 {
-    opacity: 1;
   }
   .formstyle0 {
     width: 100%;
