--- a/css/styles1.css
+++ b/css/styles1.css
@@ -10,7 +10,7 @@ html, body {
   scroll-behavior: smooth;
 }
 
-.bigtext {
+.bigText {
   font-size: 5.5vh;
   font-weight: 600;
   line-height: 50px;
@@ -18,38 +18,38 @@ html, body {
   color: black;
 }
 
-.clrtext {
+.color3Text {
   font-size: 16px;
   font-weight: 600;
   color: #db9602;
 }
 
-.usualtext {
+.usualText {
   font-weight: 500;
   margin-top: 5px;
-  font-size: 18px;
+  font-size: 22px;
   color: #14213d;
 }
 
-.standardlink {
+.standardLink {
   color: black;
   text-decoration: none;
 }
-.standardlink:hover {
+.standardLink:hover {
   color: black;
   text-decoration: none;
 }
-.standardlink:visited {
+.standardLink:visited {
   text-decoration: none;
   color: black;
 }
-.standardlink:visited:hover {
+.standardLink:visited:hover {
   text-decoration: none;
   color: black;
 }
 
 @media screen and (min-height: 960px) {
-  .bigtext {
+  .bigText {
     font-size: 50px;
   }
 }
@@ -64,6 +64,9 @@ html, body {
   visibility: hidden;
   height: 0;
   z-index: 5;
+}
+.popup h2 {
+  margin-top: 10%;
 }
 .popup .lgo {
   position: fixed;
@@ -137,12 +140,13 @@ html, body {
   transform-origin: center;
 }
 
-.primapagina {
+.firstPage {
   position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #ededed;
 }
 
 .nav1 {
@@ -158,48 +162,48 @@ html, body {
   margin-top: 8px;
   margin-left: 15px;
 }
-.nav1 .brand .bigdisp {
+.nav1 .brand .bigDisplay {
   font-size: 25px;
   font-weight: 600;
 }
-.nav1 .rightnav {
+.nav1 .rightNav {
   display: flex;
   flex-direction: row;
   margin-right: 10px;
   margin-top: 5px;
 }
-.nav1 .rightnav .navbarmenu {
+.nav1 .rightNav .navbarMenu {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.nav1 .rightnav:hover .prova1 {
+.nav1 .rightNav:hover .prova1 {
   transform: translatey(-5px) rotate(-180deg);
   transition-duration: 0.8s;
 }
-.nav1 .rightnav:hover .prova2 {
+.nav1 .rightNav:hover .prova2 {
   transform: translatey(5px) rotate(-180deg);
   transition-duration: 0.8s;
 }
-.nav1 .rightnav:hover .prova3 {
+.nav1 .rightNav:hover .prova3 {
   transform: rotate(360deg);
   transition-duration: 1.1s;
 }
-.nav1 .rightnav:hover h4 {
+.nav1 .rightNav:hover h4 {
   transform: scale(0.94);
   transition-duration: 0.4s;
 }
-.nav1 .rightnav .ham {
+.nav1 .rightNav .ham {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
   margin-left: 5px;
 }
-.nav1 .rightnav .ham .minus {
+.nav1 .rightNav .ham .minus {
   margin-bottom: -32px;
 }
 
-.principale {
+.main {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -209,34 +213,34 @@ html, body {
   width: 100%;
   height: 70%;
 }
-.principale h1 {
+.main h1 {
   font-size: 40px;
   line-height: 1em;
   margin-top: 0.15em;
   margin-bottom: 0.4em;
 }
-.principale h3 {
+.main p {
   color: #14213d;
   font-size: 28px;
   font-weight: 500;
   line-height: 1.25em;
 }
-.principale a {
+.main a {
   text-decoration: underline;
   color: #14213d;
   transition-duration: 0.2s;
   font-style: italic;
 }
-.principale a:hover {
+.main a:hover {
   -webkit-text-decoration: underline #db9602;
           text-decoration: underline #db9602;
   color: black;
 }
-.principale a:visited {
+.main a:visited {
   text-decoration: underline;
   color: #14213d;
 }
-.principale a:visited:hover {
+.main a:visited:hover {
   -webkit-text-decoration: underline #db9602;
           text-decoration: underline #db9602;
   color: black;
@@ -260,13 +264,13 @@ html, body {
   height: 100%;
 }
 
-.separa {
+.divide {
   position: absolute;
   bottom: 25px;
   left: 50%;
   transform: translateX(-50%);
 }
-.separa img:hover {
+.divide img:hover {
   transform: scale(1.15);
   transition-duration: 0.4s;
 }
@@ -278,7 +282,7 @@ html, body {
      object-fit: contain;
 }
 
-.secondaria {
+.minor {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -348,14 +352,14 @@ html, body {
   transition: 0.5s;
   border-radius: 20px;
 }
-.inside h3 {
+.inside p {
   font-size: 1.4vw;
   opacity: 0;
   transition: 0.4s;
   color: white;
   margin: 0.7em 6em 1em 15px;
 }
-.inside h6 {
+.inside h2 {
   font-size: 1.5vw;
   opacity: 0;
   transition: 0.4s;
@@ -369,18 +373,18 @@ html, body {
   height: 100%;
   opacity: 1;
 }
-.el:hover .inside h3, .el:hover .inside h6 {
+.el:hover .inside p, .el:hover .inside h2 {
   opacity: 1;
 }
 
-.terza {
+.third {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100vh;
 }
-.terza .kkx {
+.third .kkx {
   display: none;
   width: 11.42vw;
   margin: auto;
@@ -413,10 +417,17 @@ html, body {
 }
 
 .barx {
+  position: relative;
   width: 11.42vw;
   height: 4vh;
   border: 2px solid #db9602;
   background-color: rgba(219, 150, 2, 0.1921568627);
+}
+.barx .logo {
+  position: absolute;
+  bottom: 4.5vh;
+  left: 50%;
+  transform: translatex(-50%);
 }
 .barx a {
   text-decoration: underline;
@@ -437,7 +448,7 @@ html, body {
   z-index: 2;
 }
 
-.espandibile {
+.ext {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -448,22 +459,25 @@ html, body {
   height: max-content;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
+  visibility: hidden;
+  position: relative;
+  top: 4vh;
 }
-.espandibile h5 {
+.ext h5 {
   color: #ededed;
   margin: 3%;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
 }
-.espandibile h5 strong {
+.ext h5 strong {
   font-weight: 500;
   color: #db9602;
 }
-.espandibile h5 a:visited,
-.espandibile h5 a:hover,
-.espandibile h5 a:visited:hover,
-.espandibile h5 a {
+.ext h5 a:visited,
+.ext h5 a:hover,
+.ext h5 a:visited:hover,
+.ext h5 a {
   -webkit-text-decoration-color: white;
           text-decoration-color: white;
 }
@@ -472,21 +486,9 @@ html, body {
   border-right: 2px solid #ededed;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
-  position: relative;
   background-color: #db9602;
 }
-.bar1 .htmllogo {
-  position: absolute;
-  bottom: 4.5vh;
-  left: 50%;
-  transform: translatex(-50%);
-}
-.bar1 .espandibile1 {
-  visibility: hidden;
-  position: relative;
-  top: 4vh;
-}
-.bar1 #expand-togglexx:checked ~ * .espandibile1 {
+.bar1 #expand-togglexx:checked ~ * .ext {
   visibility: visible;
 }
 .bar1 #expand-togglexx {
@@ -494,43 +496,17 @@ html, body {
 }
 
 .bar2 {
-  position: relative;
   background-color: #db9602;
   border-left: 2px solid #ededed;
 }
-.bar2 .csslogo {
-  position: absolute;
-  bottom: 4.5vh;
-  left: 50%;
-  transform: translatex(-50%);
-}
-.bar2 .espandibile2 {
-  visibility: hidden;
-  position: relative;
-  top: 4vh;
-}
-.bar2 #expand-togglexx2:checked ~ * .espandibile2 {
+.bar2 #expand-togglexx2:checked ~ * .ext {
   visibility: visible;
 }
 .bar2 #expand-togglexx2 {
   display: none;
 }
 
-.bar3 {
-  position: relative;
-}
-.bar3 .javascriptlogo {
-  position: absolute;
-  bottom: 4.5vh;
-  left: 50%;
-  transform: translatex(-50%);
-}
-.bar3 .espandibile3 {
-  visibility: hidden;
-  position: relative;
-  top: 4vh;
-}
-.bar3 #expand-togglexx3:checked ~ * .espandibile3 {
+.bar3 #expand-togglexx3:checked ~ * .ext {
   visibility: visible;
 }
 .bar3 #expand-togglexx3 {
@@ -540,64 +516,24 @@ html, body {
   width: 7vh;
 }
 
-.bar4 {
-  position: relative;
-}
 .bar4 .reactjslogo {
-  position: absolute;
-  bottom: 4.5vh;
-  left: 50%;
-  transform: translatex(-50%);
   margin-bottom: -7px;
 }
-.bar4 .espandibile4 {
-  visibility: hidden;
-  position: relative;
-  top: 4vh;
-}
-.bar4 #expand-togglexx4:checked ~ * .espandibile4 {
+.bar4 #expand-togglexx4:checked ~ * .ext {
   visibility: visible;
 }
 .bar4 #expand-togglexx4 {
   display: none;
 }
 
-.bar5 {
-  position: relative;
-}
-.bar5 .nodejslogo {
-  position: absolute;
-  bottom: 4.5vh;
-  left: 50%;
-  transform: translatex(-50%);
-}
-.bar5 .espandibile5 {
-  visibility: hidden;
-  position: relative;
-  top: 4vh;
-}
-.bar5 #expand-togglexx5:checked ~ * .espandibile5 {
+.bar5 #expand-togglexx5:checked ~ * .ext {
   visibility: visible;
 }
 .bar5 #expand-togglexx5 {
   display: none;
 }
 
-.bar6 {
-  position: relative;
-}
-.bar6 .wordpresslogo {
-  position: absolute;
-  bottom: 4.5vh;
-  left: 50%;
-  transform: translatex(-50%);
-}
-.bar6 .espandibile6 {
-  visibility: hidden;
-  position: relative;
-  top: 4vh;
-}
-.bar6 #expand-togglexx6:checked ~ * .espandibile6 {
+.bar6 #expand-togglexx6:checked ~ * .ext {
   visibility: visible;
 }
 .bar6 #expand-togglexx6 {
@@ -605,45 +541,34 @@ html, body {
 }
 
 .bar7 {
-  position: relative;
   border-right: 2px solid #db9602;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-.bar7 .stilogo {
-  position: absolute;
-  bottom: 4.5vh;
-  left: 50%;
-  transform: translatex(-50%);
-}
-.bar7 .espandibile7 {
-  visibility: hidden;
-  position: relative;
-  top: 4vh;
-}
-.bar7 #expand-togglexx7:checked ~ * .espandibile7 {
+.bar7 #expand-togglexx7:checked ~ * .ext {
   visibility: visible;
 }
 .bar7 #expand-togglexx7 {
   display: none;
 }
 
-.quarta {
+.fourth {
   background-color: #f3f3f3;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100vh;
   width: 100%;
+  margin: auto;
 }
-.quarta h6, .quarta h1, .quarta h3 {
+.fourth h2, .fourth p {
   margin-left: 10vw;
   margin-right: 10vw;
 }
-.quarta form {
+.fourth form {
   width: 100%;
 }
-.quarta fieldset {
+.fourth fieldset {
   border: none;
   display: flex;
   justify-content: center;
@@ -739,13 +664,17 @@ footer {
   flex-direction: column;
   justify-content: center;
 }
-footer h1 {
+footer h2 {
   font-size: 28px;
   font-weight: 600;
 }
-footer h3 {
+footer p {
   font-weight: 400;
   font-size: 16px;
+}
+footer h5 {
+  font-size: 12px;
+  font-weight: 400;
 }
 footer .iconx {
   width: 50%;
@@ -758,35 +687,35 @@ footer .iconx {
 footer .iconx a:hover {
   transform: scale(1.1);
 }
-footer .ft0 {
+footer .footer0 {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
-footer .ft0 .ft1 {
+footer .footer0 .footer1 {
   display: flex;
   flex-direction: column;
 }
-footer .ft0 .ft1 a, footer .ft0 .ft1 a:hover, footer .ft0 .ft1 a:visited, footer .ft0 .ft1 a:visited:hover {
+footer .footer0 .footer1 a, footer .footer0 .footer1 a:hover, footer .footer0 .footer1 a:visited, footer .footer0 .footer1 a:visited:hover {
   color: #ededed;
 }
-footer .ft0 .ft2 {
+footer .footer0 .footer2 {
   display: flex;
   flex-direction: column;
 }
-footer .ft0 .ft2 .linklist {
+footer .footer0 .footer2 .linklist {
   padding-bottom: 10px;
 }
-footer .ft0 .ft2 li {
+footer .footer0 .footer2 li {
   display: inline;
   padding-right: 6px;
 }
-footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer .ft0 .ft2 a:visited:hover {
+footer .footer0 .footer2 a, footer .footer0 .footer2 a:hover, footer .footer0 .footer2 a:visited, footer .footer0 .footer2 a:visited:hover {
   color: #ededed;
 }
 
-.smalldisp {
+.smallDisplay {
   display: none;
 }
 
@@ -867,7 +796,7 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   .nav1 {
     height: 5vh;
   }
-  .principale {
+  .main {
     margin-top: 0;
     display: flex;
     flex-direction: column-reverse;
@@ -875,13 +804,13 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
     align-items: center;
     height: 80vh;
   }
-  .principale h1 {
+  .main h1 {
     font-size: 4vw;
   }
-  .principale h3 {
+  .main p {
     font-size: 3vw;
   }
-  .principale h6 {
+  .main h2 {
     font-size: 2.6vw;
   }
   .right {
@@ -890,7 +819,7 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
     margin-left: 0;
     z-index: 2;
   }
-  .rightsm {
+  .rightSmall {
     padding-bottom: 40px;
     padding-top: 40px;
     height: 30%;
@@ -901,13 +830,13 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
     margin-top: 20px;
     z-index: 3;
   }
-  .leftsm {
+  .leftSmall {
     height: 45%;
   }
   .pics1 {
     max-height: 350px;
   }
-  .secondaria {
+  .minor {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
@@ -922,7 +851,7 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
     height: max-content;
     padding-bottom: 45px;
   }
-  #projects .separa {
+  #projects .divide {
     display: none;
   }
   .grid {
@@ -947,11 +876,11 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   .el1 {
     margin-bottom: 28px;
   }
-  .inside h3 {
+  .inside p {
     margin-right: 4em;
     font-size: 3vw;
   }
-  .inside h6 {
+  .inside h2 {
     font-size: 3vw;
   }
   .formstyle0 {
@@ -963,19 +892,19 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   footer {
     padding: 15px 10px;
   }
-  footer h1 {
+  footer h2 {
     font-size: 20px;
   }
-  footer h3 {
+  footer p {
     font-size: 13px;
   }
   footer li {
     font-size: 13px;
   }
-  .terza h3 {
+  .third p {
     display: none;
   }
-  .terza .espandibile {
+  .third .ext {
     display: none;
   }
   #imm1 {
@@ -987,37 +916,37 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   .roww2 {
     display: none;
   }
-  .smalldisp {
+  .smallDisplay {
     display: block;
   }
-  .bigdisp {
+  .bigDisplay {
     display: none;
   }
 }
 @media screen and (min-width: 500px) and (max-width: 768px) and (max-height: 640px) {
-  .leftsm {
+  .leftSmall {
     margin: 0;
     padding: 0;
   }
-  .rightsm {
+  .rightSmall {
     height: 30vh;
     background-image: none;
   }
 }
 @media screen and (max-width: 500px) {
-  .principale h1 {
+  .main h1 {
     font-size: 22px;
     line-height: 24px;
     margin-bottom: 0.4em;
   }
-  .principale h3 {
+  .main p {
     font-size: 18px;
   }
-  .principale h6 {
+  .main h2 {
     font-size: 15px;
     padding-top: 6px;
   }
-  .principale .pics1 {
+  .main .pics1 {
     min-width: 220px;
   }
   .left {
@@ -1026,10 +955,10 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   .right {
     width: 90vw;
   }
-  .rightsm {
+  .rightSmall {
     padding-bottom: 0;
   }
-  .leftsm {
+  .leftSmall {
     margin-top: 10%;
   }
   .titolo3 {
@@ -1066,7 +995,7 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   .progress1 {
     margin-top: -2vh;
   }
-  .espandibile h5 {
+  .ext h5 {
     font-size: 12px;
   }
   input, textarea {
@@ -1074,27 +1003,45 @@ footer .ft0 .ft2 a, footer .ft0 .ft2 a:hover, footer .ft0 .ft2 a:visited, footer
   }
 }
 @media screen and (max-height: 650px) and (min-width: 768px) and (max-width: 1300px) {
-  .principale h1 {
+  .main h1 {
     font-size: 5vh;
     margin-bottom: 0.3em;
     margin-top: 0;
     padding: 0;
   }
-  .principale h3 {
+  .main p {
     font-size: 4.3vh;
     line-height: 1.2em;
   }
-  .principale h6 {
+  .main h2 {
     font-size: 3vh;
     margin: 0;
     padding: 0;
   }
 }
 @media screen and (min-width: 1400px) {
-  .inside h3 {
+  .inside p {
     font-size: 18px;
   }
-  .inside h6 {
+  .inside h2 {
     font-size: 18px;
+  }
+}
+@media screen and (max-height: 500px) {
+  #projects, #progressBar, #contact, footer {
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    padding: 18px 0px;
+  }
+  #firstPage {
+    height: 500px;
+  }
+  #firstPage .leftSmall {
+    padding-top: 30px;
+    margin-bottom: -30px;
+  }
+  #firstPage .rightSmall {
+    margin-bottom: 40px;
   }
 }
