--- a/scss/_barstyle.scss
+++ b/scss/_barstyle.scss
@@ -1,22 +1,77 @@
-.bar1 {
-  border-right: 2px solid $colore2;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+.barx {
   position: relative;
-  background-color: $colore3;
-  
-  .htmllogo {
+  width: 11.42vw;
+  height: 4vh;
+  border: 2px solid $colore3;
+  background-color: #db960231;
+
+  .logo {
     position: absolute;
     bottom: 4.5vh;
     left: 50%;
     transform: translatex(-50%);
-   }
-   .espandibile1 {
-     visibility: hidden;
-     position: relative;
-     top: 4vh;
+  }
+ 
+  a {
+    text-decoration: underline;
+    &:hover {
+      color: black;
+      text-decoration: underline; 
     }
-    #expand-togglexx:checked ~ * .espandibile1 {
+    &:visited {
+      text-decoration: underline;
+      color: black;
+    }
+    &:visited:hover {
+      text-decoration: underline ;
+      color: black;
+    }
+  }
+  img {
+    z-index: 2;
+  }  
+}
+
+.ext {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-color: #14213dc6;
+  width: 100%;
+  height: max-content;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+
+  visibility: hidden;
+  position: relative;
+  top: 4vh;
+
+  h5 {
+    color: $colore2;
+    margin: 3%;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    strong {
+      font-weight: 500;
+      color: $colore3;
+    }
+    a:visited,
+    a:hover,
+    a:visited:hover,
+    a {
+      text-decoration-color: white;
+    }
+  }
+}
+
+.bar1 {
+  border-right: 2px solid $colore2;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-color: $colore3;
+
+    #expand-togglexx:checked ~ * .ext {
       visibility: visible;
     }
     #expand-togglexx {
@@ -25,21 +80,10 @@
 }
 
 .bar2 {
-  position: relative;
   background-color: $colore3;
   border-left: 2px solid $colore2;
-  .csslogo {
-    position: absolute;
-    bottom: 4.5vh;
-    left: 50%;
-    transform: translatex(-50%);
-  }
-  .espandibile2 {
-    visibility: hidden;
-    position: relative;
-    top: 4vh;
-   }
-   #expand-togglexx2:checked ~ * .espandibile2 {
+
+   #expand-togglexx2:checked ~ * .ext {
     visibility: visible;
   }
   #expand-togglexx2 {
@@ -47,19 +91,8 @@
   } 
 }
 .bar3 {
-  position: relative;
-  .javascriptlogo {
-    position: absolute;
-    bottom: 4.5vh;
-    left: 50%;
-    transform: translatex(-50%);
-  }
-  .espandibile3 {
-    visibility: hidden;
-    position: relative;
-    top: 4vh;
-   }
-   #expand-togglexx3:checked ~ * .espandibile3 {
+
+   #expand-togglexx3:checked ~ * .ext {
     visibility: visible;
   }
   #expand-togglexx3 {
@@ -70,20 +103,11 @@
   } 
 }
 .bar4 {
-  position: relative;
+
   .reactjslogo {
-    position: absolute;
-    bottom: 4.5vh;
-    left: 50%;
-    transform: translatex(-50%);
     margin-bottom: -7px;
   }
-  .espandibile4 {
-    visibility: hidden;
-    position: relative;
-    top: 4vh;
-   }
-   #expand-togglexx4:checked ~ * .espandibile4 {
+   #expand-togglexx4:checked ~ * .ext {
     visibility: visible;
   }
   #expand-togglexx4 {
@@ -91,19 +115,8 @@
   } 
 }
 .bar5 {
-  position: relative;
-  .nodejslogo {
-    position: absolute;
-    bottom: 4.5vh;
-    left: 50%;
-    transform: translatex(-50%);
-  }
-  .espandibile5 {
-    visibility: hidden;
-    position: relative;
-    top: 4vh;
-   }
-   #expand-togglexx5:checked ~ * .espandibile5 {
+
+   #expand-togglexx5:checked ~ * .ext {
     visibility: visible;
   }
   #expand-togglexx5 {
@@ -111,19 +124,8 @@
   } 
 }
 .bar6 {
-  position: relative;
-  .wordpresslogo {
-    position: absolute;
-    bottom: 4.5vh;
-    left: 50%;
-    transform: translatex(-50%);
-  }
-  .espandibile6 {
-    visibility: hidden;
-    position: relative;
-    top: 4vh;
-   }
-   #expand-togglexx6:checked ~ * .espandibile6 {
+
+   #expand-togglexx6:checked ~ * .ext {
     visibility: visible;
   }
   #expand-togglexx6 {
@@ -131,22 +133,11 @@
   } 
 }
 .bar7 {
-  position: relative;
   border-right: 2px solid $colore3;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  .stilogo {
-    position: absolute;
-    bottom: 4.5vh;
-    left: 50%;
-    transform: translatex(-50%);
-  }
-  .espandibile7 {
-    visibility: hidden;
-    position: relative;
-    top: 4vh;
-   }
-   #expand-togglexx7:checked ~ * .espandibile7 {
+
+   #expand-togglexx7:checked ~ * .ext {
     visibility: visible;
   }
   #expand-togglexx7 {
