--- a/scss/_max500.scss
+++ b/scss/_max500.scss
@@ -1,14 +1,14 @@
 @media screen and (max-width: 500px) {
-  .principale {
+  .main {
     h1 {
       font-size: 22px;
       line-height: 24px;
       margin-bottom: .4em;
     }
-    h3 {
+    p {
       font-size: 18px;
     }
-    h6 {
+    h2 {
       font-size: 15px;
       padding-top: 6px;
     }
@@ -25,10 +25,10 @@
       width: 90vw;
     }
 
-  .rightsm {
+  .rightSmall {
     padding-bottom: 0;
   }
-  .leftsm {
+  .leftSmall {
     margin-top: 10%;
   }
 
