--- a/scss/_max768.scss
+++ b/scss/_max768.scss
@@ -20,7 +20,7 @@
     height: 5vh;
   }
 
-  .principale {
+  .main {
     margin-top: 0;
     display: flex;
     flex-direction: column-reverse;
@@ -30,10 +30,10 @@
     h1 {
       font-size: 4vw;
     }
-    h3 {
+    p {
       font-size: 3vw;
     }
-    h6 {
+    h2 {
       font-size: 2.6vw;
     }
   }
@@ -44,7 +44,7 @@
     margin-left: 0;
     z-index: 2; 
   }
-  .rightsm {
+  .rightSmall {
     padding-bottom: 40px;
     padding-top: 40px;
     height: 30%;
@@ -56,14 +56,14 @@
     margin-top: 20px;
     z-index: 3; 
   }
-  .leftsm {
+  .leftSmall {
     height: 45%;
   }
   .pics1 {
     max-height: 350px;
   }
 
-  .secondaria {
+  .minor {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center; 
@@ -75,7 +75,7 @@
     background-color: #f3f3f3;
     height: max-content;
     padding-bottom: 45px;
-    .separa {
+    .divide {
       display: none;
     }
   }
@@ -105,11 +105,11 @@
     margin-bottom: 28px;
   }
   .inside {
-    h3 {
+    p {
       margin-right: 4em;
       font-size: 3vw;
     }
-    h6 {
+    h2 {
       font-size: 3vw;
     }
   }
@@ -123,10 +123,10 @@
 
   footer {
     padding: 15px 10px;
-    h1 {
+    h2 {
       font-size: 20px;
     }
-    h3 {
+    p {
       font-size: 13px;
     }
     li {
@@ -134,11 +134,11 @@
     }
   }
 
-  .terza {
-    h3 {
+  .third {
+    p {
       display: none;
     }
-    .espandibile {
+    .ext {
       display: none;
     }
   }
@@ -153,21 +153,21 @@
   .roww2 {
     display: none;
   }
-  .smalldisp {
+  .smallDisplay {
     display: block;
   }
-  .bigdisp {
+  .bigDisplay {
     display: none;
   }
   
 }
 
 @media screen and (min-width: 500px) and (max-width: 768px) and (max-height: 640px) {
-  .leftsm {
+  .leftSmall {
     margin: 0;
     padding: 0;
   }
-  .rightsm {
+  .rightSmall {
     height: 30vh;
     background-image: none;
   }
