--- a/scss/_popupmenu.scss
+++ b/scss/_popupmenu.scss
@@ -9,6 +9,10 @@
   visibility: hidden;
   height: 0;
   z-index: 5;
+  
+  h2 {
+        margin-top: 10%;
+      }
 
   .lgo {
     position: fixed;
@@ -18,6 +22,7 @@
       font-size: 25px;
       font-weight: 600;
     }
+    
   }
 
   .content {
