--- a/assets/scss/styles1.scss
+++ b/assets/scss/styles1.scss
@@ -215,14 +215,15 @@
   p {
    font-size: 1.4vw;
    opacity: 0;
-   transition: .4s;
+   transition: .6s;
+   transition-delay: .15s;
    color: white;
    margin: .7em 6em 1em 15px;
   }
   h2 {
     font-size: 1.5vw;
     opacity: 0;
-    transition: .4s;
+    transition: .6s;
     color: $colore3;
     margin-left: 15px;
     padding-top: 12px;
