--- a/assets/scss/_max768.scss
+++ b/assets/scss/_max768.scss
@@ -120,8 +120,11 @@
       width: 30vw;
     }
   }
+  
+  
 
   footer {
+    height: 300px;
     padding: 15px 10px;
     h2 {
       font-size: 20px;
@@ -132,7 +135,22 @@
     li {
       font-size: 13px;
     }
+
+    .footer0 {
+    flex-direction: column;
+    
+    }
+    .footer1 {
+      align-items: center;
+      padding: 10px;
+    }  
+    .footer2 {
+      align-items: center;
+      padding: 10px;
+    }
   }
+
+  
 
   .third {
     p {
