--- a/assets/scss/_max768.scss
+++ b/assets/scss/_max768.scss
@@ -143,10 +143,15 @@
     .footer1 {
       align-items: center;
       padding: 10px;
+      text-align: center;
     }  
     .footer2 {
       align-items: center;
       padding: 10px;
+      text-align: center;
+    }
+    br {
+      display: none;
     }
   }
 
