--- a/assets/scss/_generalstyles.scss
+++ b/assets/scss/_generalstyles.scss
@@ -1,4 +1,4 @@
-$colore2: #ededed;
+$colore2: #ededed;  //#faf9f6 better color, but must change bg color to my pic
 $colore3: #db9602;
 $colore4: #14213d;
 
